--- a/Semana 2/parrafo.html
+++ b/Semana 2/parrafo.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <p>
-        <span style="background-color: blue;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quasi facere perspiciatis labore! Fugit .</span>
+        <span style="background-color: blue;">Lorem ipsum dolor sit amet 
+            consectetur adipisicing elit. Officiis quasi facere perspiciatis 
+            labore! Fugit .</span>
     </p>
 </body>
 </html>
