--- a/Semana 2/title.html
+++ b/Semana 2/title.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p title="Mensaje tooltip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est dicta laudantium explicabo! Corrupti quia quas, aliquam perferendis iste ullam voluptatibus, saepe iusto consequatur veniam maiores architecto nemo porro ducimus officiis.</p>
+    <p title="Mensaje tooltip">Lorem ipsum dolor sit amet consectetur 
+        adipisicing elit. Est dicta laudantium explicabo! Corrupti quia quas, 
+        aliquam perferendis iste ullam voluptatibus, 
+        saepe iusto consequatur veniam maiores architecto nemo porro 
+        ducimus officiis.</p>
 </body>
 </html>
