--- a/Semana 7/listar.html
+++ b/Semana 7/listar.html
@@ -88,30 +88,31 @@
                 <form id="formularioInsertar">
                   <div class="mb-3">
                     <label for="" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" name="" id="nombreI" aria-describedby="helpId"
+                    <input type="text" class="form-control" name=""  required="true" id="nombreI" aria-describedby="helpId"
                       placeholder="Ingresa el nombre del curso">
                     <small id="helpId" class="form-text text-muted">Nombre aca</small>
                   </div>
 
                   <div class="mb-3">
                     <label for="" class="form-label">Descripcion</label>
-                    <input type="text" class="form-control" name="" id="descripcionI" aria-describedby="helpId"
+                    <input type="text" class="form-control" name="" required="true" id="descripcionI" aria-describedby="helpId"
                       placeholder="Ingresa la descripcion del curso">
                     <small id="helpId" class="form-text text-muted">Descripcion aca</small>
                   </div>
 
                   <div class="mb-3">
                     <label for="" class="form-label">Tiempo</label>
-                    <input type="text" class="form-control" name="" id="tiempoI" aria-describedby="helpId"
+                    <input type="text" class="form-control" name="" required="true" id="tiempoI" aria-describedby="helpId"
                       placeholder="Ingresa el tiempo del curso">
                     <small id="helpId" class="form-text text-muted">Tiempo aca</small>
                   </div>
-                  <div class="mb-3">
+
+                  <!-- <div class="mb-3">
                     <label for="" class="form-label">Usuario</label>
                     <input type="text" class="form-control" name="" id="usuarioI" aria-describedby="helpId"
                       placeholder="Ingresa el usuario">
                     <small id="helpId" class="form-text text-muted">Usuario aca</small>
-                  </div>
+                  </div> -->
 
                   <div class="mb-3">
                     <button type="reset" class="btn btn-danger">Limpiar</button>
@@ -162,8 +163,8 @@
                 </div>
                 <div class="mb-3">
                   <label for="" class="form-label">Usuario</label>
-                  <input type="text" class="form-control" name="" id="usuarioE" aria-describedby="helpId"
-                    placeholder="Ingresa el usuario">
+                  <input type="text" class="form-control" name="" readonly="readonly" id="usuarioE"
+                    aria-describedby="helpId" placeholder="Ingresa el usuario">
                   <small id="helpId" class="form-text text-muted">Usuario aca</small>
                 </div>
 
@@ -224,6 +225,55 @@
       </div>
 
 
+      <!-- Modal Ver detalles -->
+      <div class="modal fade" id="modalVerDetalle" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false"
+        role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalTitleId">Detalles</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <form id="formularioVerDetalles">
+                <div class="mb-3">
+                  <label for="" class="form-label">Nombre</label>
+                  <input type="text" class="form-control" name="" readonly="readonly" id="nombreV"
+                    aria-describedby="helpId" placeholder="Ingresa el nombre del curso">
+                  <small id="helpId" class="form-text text-muted">Nombre aca</small>
+                </div>
+
+                <div class="mb-3">
+                  <label for="" class="form-label">Descripcion</label>
+                  <input type="text" class="form-control" name="" readonly="readonly" id="descripcionV"
+                    aria-describedby="helpId" placeholder="Ingresa la descripcion del curso">
+                  <small id="helpId" class="form-text text-muted">Descripcion aca</small>
+                </div>
+
+                <div class="mb-3">
+                  <label for="" class="form-label">Tiempo</label>
+                  <input type="text" class="form-control" name="" readonly="readonly" id="tiempoV"
+                    aria-describedby="helpId" placeholder="Ingresa el tiempo del curso">
+                  <small id="helpId" class="form-text text-muted">Tiempo aca</small>
+                </div>
+                <div class="mb-3">
+                  <label for="" class="form-label">Usuario</label>
+                  <input type="text" class="form-control" name="" readonly="readonly" id="usuarioV"
+                    aria-describedby="helpId" placeholder="Ingresa el usuario">
+                  <small id="helpId" class="form-text text-muted">Usuario aca</small>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              <!-- <button type="button" class="btn btn-primary">Save</button> -->
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
     </main>
     <footer class="my-5 pt-5 text-muted text-center text-small">
       <p class="mb-1">&copy; 2022–2023 Joestar Company</p>
@@ -276,6 +326,10 @@
                 id="mostrarModal" onclick="editar(
                   '${valor.id}','${valor.nombre}', '${valor.descripcion}', 
                   '${valor.tiempo}', '${valor.usuario}')">Editar
+              </button> || <button type="button" 
+                class="btn btn-warning" onclick="verDetalles('${valor.id}',
+                  '${valor.nombre}', '${valor.descripcion}', 
+                  '${valor.tiempo}', '${valor.usuario}')">Ver detalles
               </button>
             </td>
           </tr>`;
@@ -299,7 +353,7 @@
           nombre: document.getElementById('nombreI').value,
           descripcion: document.getElementById('descripcionI').value,
           tiempo: document.getElementById('tiempoI').value,
-          usuario: document.getElementById('usuarioI').value,
+          usuario: "MotoMoto",
         }
         console.log(datosInsertar);
 
@@ -315,7 +369,7 @@
         refrescar();
       })
 
-    }//fin de la función
+    }//fin de la función insertar
 
     function editar(id, nombre, descripcion, tiempo, usuario) {
       const myModal = new bootstrap.Modal(document.getElementById(
@@ -350,7 +404,7 @@
         refrescar();
       })
 
-    }//fin de la 
+    }//fin de la función editar
 
 
 
@@ -382,21 +436,19 @@
       })
 
 
-      //alert('eliminado');
-    }//Fin de la función
+      //alert('eliminado'); 
+    }//Fin de la función eliminar
 
-
-
-
-    /*function obtenerID() {
-      // Obtén el elemento que contiene el botón o enlace de eliminación
-      const botonEliminar = document.getElementById('boton-eliminar');
-
-      // Obtén el ID del elemento a eliminar desde el atributo data-id
-      const id = botonEliminar.getAttribute('data-id');
-      "https://paginas-web-cr.com/ApiPHP/apis/ActualizarCursos.php"
-      return id;
-    }*/
+    function verDetalles(id, nombre, descripcion, tiempo, usuario) {
+      const myModal = new bootstrap.Modal(document.getElementById(
+        'modalVerDetalle'));
+      myModal.show();
+      document.getElementById('nombreV').value = nombre;
+      document.getElementById('descripcionV').value = descripcion;
+      document.getElementById('tiempoV').value = tiempo;
+      document.getElementById('usuarioV').value = usuario;
+      
+    }//fin de la función ver detalles
 
   </script>
 </body>
